brought in querydsl to handle query params